# ocaml_micro_services

./: README.md  azure-pipelines-1.yml  azure-pipelines.yml  cloudbuild.yaml
commands/: dune  find.ml
first_arch/: Dockerfile  dune  dune-project  main.ml  main.opam
first_arch/domain/: README.md  dune  mail.ml  user.ml
first_arch/infrastructure/: README.md  dune  user.ml
first_arch/middleware/: dune  routes.ml
first_arch/model/: README.md
manifests/: dev-v2.yaml  dev.yaml
